# verified-extraction-audit

./: .gitignore  CITATION.bib  CITATION.cff  EXPORT_PLAN.md  LICENSE  README.md  pyproject.toml
examples/synthetic/: labeled.csv  labeled.parquet  notes.csv  notes.parquet
index/: datasets.csv  generated_notes.csv  models.csv
src/: _repo.py  folder_handler.py
src/configs/dataset/: mimic.yaml
src/configs/jobs/: submit_finetuning_job.yaml  submit_finetuning_job_1b_large.yaml
src/dataset/pii_insertion/: README.md  build_name_filter_list.py  check_incomplete_completions.py  count_caregivers.py  evaluate_pii.py  fake_persona.py  manual_insertion.py  persona_check.py  pii_injection.py  sampling.py  sampling_manual.py  sampling_manual_old.py  zip_data.py
src/dataset/prepare/: __init__.py  di_types.py  ingest.py  inject.py  make_synthetic.py  mimic_subset.py  seed_index.py
src/dataset/splits/: mimic.py  stats_to_latex.py
src/evaluation/audit/: __init__.py  from_labels.py
src/evaluation/exploration/: denominators.py
src/evaluation/pipeline/: README.md  attack_curves.py  completions_to_csv.py  compute_risk.py  compute_risk.sh  compute_risk_batch.py  experimental_recall.py  experimental_recall.sh  experimental_recall_2.py  experimental_recall_pp.py  generate_completions.py  mia_risk.py  pipeline-attack-2.py  pipeline-attack-3.py  pipeline-attack-4.py  pipeline-attack-5.py  pipeline-attack-6.py  pipeline-attack.py  plot_relative_leakage_risk.py  replot_combined.py  theory_curves.py
src/finetuning/: finetune.py  postproc_models.py  utils.py
src/jobs/finetuning/: submit_finetuning_job.py
src/jobs/mimic/: run_mimic.sh  (+1 more)
src/llm/: __init__.py
tests/: test_batched_ll.py  test_confusion_matrix.py  test_llm_reasoning.py
(+99 files in other folders)
