[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verified-extraction-audit"
version = "0.1.0"
description = "Code for verified extraction audit: data preprocessing, model training, and evaluation pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "Faker>=37.1.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "huggingface_hub>=0.28.1",
    "pandas>=2.2.3",
    "numpy>=1.20.0",
    "tqdm",
    "peft>=0.14.0",
    "bitsandbytes>=0.41.0",
    "deepspeed>=0.16.4",
    "wandb",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "loguru",
    "pyarrow",
    "scikit-learn>=1.7.0",
    "langcodes>=3.5.0",
    "language_data>=1.1",
    "natsort>=8.4.0",
    "json_repair>=0.47.3",
    "hydra-core>=1.3.0",
    "omegaconf>=2.0.0",
    "PyYAML",
    "requests",
]
# Optional: for PII insertion with Gemini
# "google-genai>=1.21.1"
# Optional: for prepare_last_name in evaluation
# "names-dataset"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=23.0",
    "isort>=5.10",
]

[tool.setuptools]
packages = ["src"]
